---
source: crates/compiler/tests/converter_test/mod.rs
assertion_line: 23
expression: hello < world
---
- TextCall:
    fast_path: false
    need_patch: false
    texts:
      - StrLit: "hello "
      - StrLit: "<"
      - StrLit: " world"

